# cppsockets

./: .gitignore  CMakeLists.txt  Makefile  README.md  libraries.mk
examples/example-client/: main.cpp
examples/example-server/: main.cpp
examples/includes/: cpp_argparse.hpp
includes/: Logger.hpp  client.hpp  server.hpp
includes/client/: client_connection.hpp
includes/common/: inet_address.hpp  side.hpp  socket.hpp  tcp_socket.hpp
includes/common/data/: data.hpp
includes/common/interfaces/: gateway_interface.hpp
includes/common/packets/: buffered_io.hpp  packet_parser.hpp  packet_parser_list.hpp
includes/common/protocols/: packet_manager.hpp  protocol.hpp  protocol_list.hpp
includes/common/socket_handlers/: poll_sockethandler.hpp  select_sockethandler.hpp
includes/net/: client.hpp  server.hpp
includes/net/common/: InetAddress.hpp  PacketManager.hpp  packed_data.hpp
includes/packets/raw/: gateway_interface.hpp  packet_parser.hpp
includes/protocols/raw/: protocol_interface.hpp  protocol_parser.hpp
includes/protocols/tcp/: interface.hpp  protocol.hpp
includes/server/: clients_manager.hpp  server_client.hpp  server_endpoint.hpp
src/: client.cpp  server.cpp
src/client/: client_connection.cpp
src/common/: inet_address.cpp  socket.cpp  tcp_socket.cpp
src/common/packets/: buffered_io.cpp
src/common/protocols/: packet_manager.cpp
src/common/socket_handlers/: poll_sockethandler.cpp  select_sockethandler.cpp
src/packets/raw/: raw_packets.cpp
src/protocols/raw/: protocol.cpp
src/protocols/tcp/: protocol.cpp
src/server/: clients_manager.cpp  server_client.cpp  server_endpoint.cpp
srcs-client/: main.cpp
srcs-server/: main.cpp
